--- a/src/App.css
+++ b/src/App.css
@@ -135,6 +135,7 @@ html,body {
 
 .portal-wrapper {
   display: grid;
+  padding: 1rem;
   gap: 1rem;
   grid-template-columns: 1fr;
   grid-template-rows: auto 1fr auto;
@@ -142,9 +143,6 @@ html,body {
                         "main"
                         "footer";
   height: 100dvh;
-    header {
-    display: none;
-  }
 
   @media(min-width: 768px){
   grid-template-columns: 150px 1fr;
@@ -172,6 +170,12 @@ header {
   background-color: var(--header-background-color);
   border-radius: 1rem;
   padding: 1.5rem;
+  display: none;
+}
+@media (min-width: 768px) {
+  header {
+    display: block;
+  }
 }
 
 main {
@@ -239,7 +243,7 @@ footer {
   position: absolute;
   top: 12px;
   left: 0;
-  width: 6px;
+  width: 5px;
   height: 50%;
   background-color: transparent;
   border-radius: 0 4px 4px 0;
@@ -258,4 +262,23 @@ footer {
 .nav-link:focus .nav-text {
   color: var(--primary-100);
   font-weight: 600;
+}
+
+
+.event-section {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  gap: 2rem;
+}
+
+/* components */
+
+.event-card {
+  background-color: var(--grey-10);
+  display: grid;
+  max-width: 400px;
+  width: 100%;
+  padding: 1rem;
+  border-radius: 1rem;
+  gap: 0.7rem;
 }
