--- a/src/App.css
+++ b/src/App.css
@@ -145,7 +145,7 @@ html,body {
   height: 100dvh;
 
   @media(min-width: 768px){
-  grid-template-columns: 150px 1fr;
+  grid-template-columns: 80px 1fr;
   grid-template-areas:  "nav header"
                         "nav main"
                         "nav footer"
@@ -163,7 +163,35 @@ nav {
   background-color: var(--nav-background-color);
   border-radius: 1rem;
   padding: 1.5rem;
+  /* display: flex;
+  justify-content: space-between; */
 }
+.nav-content {
+  display: flex;
+  justify-content: space-between;
+  /* align-items: center; */
+}
+
+@media (min-width: 768px) {
+  nav {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 1rem;
+    padding: 0rem;
+    padding-top: 1.5rem;
+  }
+} 
+@media (min-width: 768px) {
+  .nav-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 1rem;
+    padding: 0rem;
+    padding-top: 1.5rem;
+  }
+} 
 
 header {
   grid-area: header;
@@ -191,13 +219,10 @@ footer {
   border-radius: 1rem;
   padding: 1.5rem;
 }
-
 .logo-container {
   display: flex;
-  justify-content: center;
+  /* justify-content: flex-start; */
   align-items: center;
-  gap: 0.6rem;
-  padding: 0rem 4rem 0 3rem;
 }
 .logo-img{
   height: 24px;
@@ -205,21 +230,44 @@ footer {
 }
 
 .logo-text{
+  display: none;
   font-family: var(--font);
   color: var(--secondary-100);
   font-size: 2rem;
 }
-@media (max-width: 768px) {
-  .logo-text {
-    display: none;
+
+@media (min-width: 768px) {
+  .logo-container{
+    justify-content: center;
+    align-items: center;
   }
+}
+@media (min-width: 1400px) {
+  .logo-text {
+    display: inline;
+  }
+  .logo-container{
+      justify-content: flex-start;
+      margin-left: 1.8rem;
+      align-items: center;
+      gap: 0.6rem;
+  }  
+}
+
+.hamb-menu {
+ @media(min-width: 768px) {
+  display: none;
+ }
 }
 
 .nav-links {
-  margin-top: 2rem;
-  display: grid;
-  row-gap: 2rem;
-  padding: 1rem;
+  margin-top:1rem;
+  display: none;
+}
+@media (min-width: 768px) {
+  .nav-links{
+    display: grid;
+  }
 }
 
 .nav-link {
@@ -227,18 +275,37 @@ footer {
   display: flex;
   align-items: center;
   column-gap: 2rem;
-  padding: 1rem 0 1rem 2rem;
+  padding: 1rem 0 1rem 1.7rem;
   cursor: pointer;
   text-decoration: none;
   color: var(--secondary-100);
+  
+}
+@media (max-width: 1400px) {
+  .nav-link{
+    padding: 0rem;
+    justify-content: center;
+    align-items: center;
+    margin-top: 1rem;
+  
+  }
+}
+.nav-icon {
+      font-size: 1.5rem;
 }
 
 .nav-icon,
 .nav-text {
   transition: color 150ms ease-in-out, font-weight 150ms ease-in-out;
 }
+  @media (max-width: 1400px) {
+  .nav-text {
+    display: none;
+  }
+}
 
 .nav-link::before {
+  display: none;
   content: '';
   position: absolute;
   top: 12px;
@@ -249,6 +316,45 @@ footer {
   border-radius: 0 4px 4px 0;
   transition: background-color 150ms ease-in-out;
 }
+  @media (min-width: 1400px) {
+  .nav-link::before {
+    display: block;
+  }
+}
+@media (min-width: 768px) and (max-width: 1399px) {
+  .nav-link {
+    justify-content: center;
+    align-items: center;
+    padding: 1rem;
+    background-color: transparent;
+    border-radius: 50%;
+    width: 48px;
+    height: 48px;
+    margin-inline: auto;
+    position: relative;
+      /* border: 1px solid red; */
+  }
+
+  .nav-link .nav-icon {
+    color: var(--secondary-100);
+  }
+
+  .nav-link.active,
+  .nav-link:hover,
+  .nav-link:focus {
+    background-color: var(--primary-100);
+        z-index: 1;
+  }
+
+  .nav-link.active .nav-icon,
+  .nav-link:hover .nav-icon,
+  .nav-link:focus .nav-icon {
+  color: white !important;
+    position: relative;
+    z-index: 1;
+  }
+}
+
 
 .nav-link:hover::before,
 .nav-link:focus::before,
@@ -267,7 +373,7 @@ footer {
 
 .event-section {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   gap: 2rem;
 }
 
@@ -281,4 +387,54 @@ footer {
   padding: 1rem;
   border-radius: 1rem;
   gap: 0.7rem;
+}
+
+.log-out-container {
+  display: none;
+}
+
+@media (min-width: 768px) {
+  .log-out-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+}
+@media (min-width: 768px) {
+  .primary-button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 12px;
+    border: transparent;
+    gap: 1rem;
+    background-color: var(--cool-grey-20);
+    color: var(--secondary-100);
+    font-size: 1rem;
+    font-family: var(--font);
+    border-color: var(--cool-grey-20);
+    padding: 0.8rem 2rem;
+    margin-bottom: 1rem;
+  }
+}
+.log-out-icon{
+  height: 24px;
+  width: 24px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+
+@media (min-width: 768px) and (max-width: 1399px) {
+  .btn-text {
+    display: none;
+  }
+}
+@media (min-width: 768px) and (max-width: 1399px) {
+  .primary-button {
+    border-radius: 50%;
+    padding: 1rem;
+    margin-bottom: 1rem;
+  }
 }
