--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,7 @@
 
   --primary-100: #F26CF9;
   --primary-90: #F589FA;
+  --primary-90-opacity: rgba(154, 1, 162, 0.453);
   --primary-50: #FCD3FE;
   --primary-40: #FCE2FE;
   --primary-30: #FDEDFE;
@@ -455,13 +456,13 @@ footer {
     transform: translate(-50%, -50%) scale(0);
     width: 100dvw;
     height: 100dvh;
-    background: rgba(0, 0, 0, 0.5);
+    background: var(--primary-90-opacity);
     display: flex;
     justify-content: center;
     align-items: center;
     z-index: 10000;
     opacity: 0;
-    transition: transform 0.5s ease, opacity 0.5s ease;
+    transition: transform 0.5s cubic-bezier(0.4, 0, 0.2, 1), opacity 0.5s ease-in-out;
 
 }
 .DropDownMenuModal.active {
@@ -475,16 +476,15 @@ footer {
  grid-template-columns: 1fr;
  width: 90%;
  max-width: 1000px;
- background: rgba(255, 255, 255, 0.1);
+ background: rgba(255, 255, 255, 0.279);
  border: 2px solid rgba(255, 255, 255, 0.3);
  border-radius: 20px;
  backdrop-filter: blur(15px);
  box-shadow: 0 0 30px rgba(0, 0, 0, 0.3);
  padding: 40px;
- color: var(--card-cookie-text-color);
- transform: scale(0.8);
+ transform: scale(0.95);
  opacity: 0;
- transition: transform 0.5s ease-in-out, opacity 0.5s ease-in-out;
+transition: transform 0.5s ease-in-out, opacity 0.5s ease-in-out, box-shadow 0.5s ease-in-out;
  z-index: 999;
  position: relative;
  overflow:hidden
@@ -548,7 +548,7 @@ footer {
  font-size: 1em;
  color: #fff;
  font-weight: 500;
-
+  transition: box-shadow 0.2s ease;
 }
 .drop-down-btn:focus-within,
 .drop-down-btn:hover{
