--- a/src/App.css
+++ b/src/App.css
@@ -193,6 +193,15 @@ nav {
     padding-top: 1.5rem;
   }
 } 
+@media (min-width: 768px) {
+  .current-page-info {
+    display: none
+  }
+} 
+
+.return-link-text {
+  display: none
+}
 
 header {
   grid-area: header;
@@ -203,7 +212,33 @@ header {
 }
 @media (min-width: 768px) {
   header {
-    display: block;
+    display: flex;
+    justify-content:space-between;
+  }
+}
+.gear-container {
+  display: none;
+}
+.gear-icon {
+  font-size: 1.6rem;
+  background-color: transparent;
+  color: var(--grey-10);
+  border-radius: 50%;
+
+}
+@media (min-width: 768px) {
+  .gear-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  background-color: var(--secondary-100); /* mörk bakgrund */
+  border-radius: 50%;
+  padding: 0.7rem;
+  width: 45px;
+  height: 45px;
+  cursor: pointer;
+    
   }
 }
 
@@ -224,6 +259,7 @@ footer {
   display: flex;
   /* justify-content: flex-start; */
   align-items: center;
+  gap: 2rem;
 }
 .logo-img{
   height: 24px;
@@ -256,9 +292,9 @@ footer {
 }
 .hamb-menu{
   cursor:pointer;
-  height: 24px;
+  /* height: 24px; use this when no access to fontawesome
   width: 25px;
-  background-color: red;
+  background-color: red; */
 
 }
 .hamb-menu {
@@ -387,7 +423,27 @@ footer {
 
 /* components */
 
+.back-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1rem;
+  font-weight: bold;
+  color: var(--link-color);
+  text-decoration: none;
+  align-items: center;
+  gap: 0.4rem;
+  transition: transform 0.2s ease-in-out;
+}
+.back-link:hover {
+  transform: scale(1.05);
+}
+
+
 .event-card {
+  /* text-decoration and color inherit to remove link style */
+  text-decoration: none;
+  color:inherit;
   background-color: var(--grey-10);
   display: grid;
   max-width: 400px;
@@ -395,6 +451,33 @@ footer {
   padding: 1rem;
   border-radius: 1rem;
   gap: 0.7rem;
+  transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out, margin 0.3s ease-in-out;
+  transform: translateY(0);
+  box-shadow: none;       
+  .img-container{
+    border-radius: 0.675rem;
+    height:200px;
+    width: 100%;
+    background-color: var(--grey-40);
+  }
+  .event-card-main{
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+  }
+
+  .event-card-footer{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
+}
+.event-card:focus-within,
+.event-card:hover{
+  /* border:1px solid red; */
+transform: translateY(-10px);
+  transition: all 0.1s ease-in-out;
+   box-shadow: 0 0 10px var(--primary-50);
 }
 
 .log-out-container {
@@ -475,7 +558,7 @@ footer {
  margin-top: -300px;
  grid-template-columns: 1fr;
  width: 90%;
- max-width: 1000px;
+ max-width: 700px;
  background: rgba(255, 255, 255, 0.279);
  border: 2px solid rgba(255, 255, 255, 0.3);
  border-radius: 20px;
@@ -548,13 +631,13 @@ transition: transform 0.5s ease-in-out, opacity 0.5s ease-in-out, box-shadow 0.5
  font-size: 1em;
  color: #fff;
  font-weight: 500;
-  transition: box-shadow 0.2s ease;
+ transition: box-shadow 0.2s ease, transform 0.2s ease;
 }
 .drop-down-btn:focus-within,
 .drop-down-btn:hover{
   /* border:1px solid red; */
-   box-shadow: 0 0 10px var(--primary-50);
-  
+  box-shadow: 0 0 10px var(--primary-50);
+  transform: scale(1.05);
    
   }
 
