--- a/src/App.css
+++ b/src/App.css
@@ -661,3 +661,218 @@ transition: transform 0.5s ease-in-out, opacity 0.5s ease-in-out, box-shadow 0.5
   justify-content: center;
   align-items: center;
 }
+
+
+.event-header {
+  display:flex;
+  justify-self: flex-end;
+  margin-right: 1rem;
+  margin-bottom: 0.8rem;
+}
+.add-event-btn {
+  background-color: var(--primary-100);
+  color: var(--grey-10);
+  display: inline-flex;
+  margin-top: 1rem;
+  gap: 0.5rem;
+  border-radius: 36px;
+    padding: 0.8rem 1rem;
+    border: transparent;
+  &:hover, &:focus{
+    background-color: var(--primary-90);
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
+    cursor: pointer;
+  }
+
+}
+
+.create-event-modal {
+  position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(0);
+    width: 100dvw;
+    height: 100dvh;
+    background: var(--primary-90-opacity);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 10000;
+    opacity: 0;
+    transition: transform 0.5s cubic-bezier(0.4, 0, 0.2, 1), opacity 0.5s ease-in-out;
+}
+.create-event-modal.active {
+  transform: translate(-50%, -50%) scale(1);
+  opacity: 1;
+}
+.create-event-modal-card {
+ display: grid;
+ /* margin-top: -100px; */
+ grid-template-columns: 1fr;
+ width: 90%;
+ max-width: 700px;
+ background: rgba(255, 255, 255, 0.279);
+ border: 2px solid rgba(255, 255, 255, 0.3);
+ border-radius: 20px;
+ backdrop-filter: blur(15px);
+ box-shadow: 0 0 30px rgba(0, 0, 0, 0.3);
+ padding: 40px;
+ transform: scale(0.95);
+ opacity: 0;
+transition: transform 0.5s ease-in-out, opacity 0.5s ease-in-out, box-shadow 0.5s ease-in-out;
+ z-index: 999;
+ position: relative;
+ overflow:hidden
+}
+.create-event-modal-card.active {
+  transform: scale(1);
+  opacity: 1;
+  box-shadow: 0 0 30px var(--primary-50);
+}
+.create-event-modal-card:hover,
+.create-event-modal-card:focus-within {
+  box-shadow: 0 0 10px var(--primary-50);
+}
+
+.form-container {
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+  width: 100%;
+}
+
+.form-group {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+.form-group label {
+  margin-top: 0.9em;
+  font-weight: 600;
+  color: var(--text-color);
+}
+
+.form-group input,
+.form-group select,
+.form-group textarea {
+  padding: 0.8rem 1rem;
+  border: 1px solid var(--input-border-color);
+  border-radius: 8px;
+  background-color: var(--input-background-color);
+  color: var(--input-text-color);
+  font-family: var(--font);
+  transition: border-color 0.3s ease;
+}
+
+.form-group input:focus,
+.form-group select:focus,
+.form-group textarea:focus {
+  border-color: var(--input-border-focus-color);
+  outline: none;
+}
+
+
+.event-details-card{
+  background-color: var(--grey-60);
+  border-radius: 14px;
+  height: 800px;
+  padding: 1rem;
+  width: 800px
+}
+
+
+
+/* edit modal */
+.edit-event-modal {
+  position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(0);
+    width: 100dvw;
+    height: 100dvh;
+    background: var(--primary-90-opacity);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 10000;
+    opacity: 0;
+    transition: transform 0.5s cubic-bezier(0.4, 0, 0.2, 1), opacity 0.5s ease-in-out;
+}
+.edit-event-modal.active {
+  transform: translate(-50%, -50%) scale(1);
+  opacity: 1;
+}
+.edit-event-modal-card {
+ display: grid;
+ /* margin-top: -100px; */
+ grid-template-columns: 1fr;
+ width: 90%;
+ max-width: 700px;
+ background: rgba(255, 255, 255, 0.279);
+ border: 2px solid rgba(255, 255, 255, 0.3);
+ border-radius: 20px;
+ backdrop-filter: blur(15px);
+ box-shadow: 0 0 30px rgba(0, 0, 0, 0.3);
+ padding: 40px;
+ transform: scale(0.95);
+ opacity: 0;
+transition: transform 0.5s ease-in-out, opacity 0.5s ease-in-out, box-shadow 0.5s ease-in-out;
+ z-index: 999;
+ position: relative;
+ overflow:hidden
+}
+.edit-event-modal-card.active {
+  transform: scale(1);
+  opacity: 1;
+  box-shadow: 0 0 30px var(--primary-50);
+}
+.edit-event-modal-card:hover,
+.edit-event-modal-card:focus-within {
+  box-shadow: 0 0 10px var(--primary-50);
+}
+
+.form-container {
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+  width: 100%;
+}
+
+.form-group {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+.form-group label {
+  margin-top: 0.9em;
+  font-weight: 600;
+  color: var(--text-color);
+}
+
+.form-group input,
+.form-group select,
+.form-group textarea {
+  padding: 0.8rem 1rem;
+  border: 1px solid var(--input-border-color);
+  border-radius: 8px;
+  background-color: var(--input-background-color);
+  color: var(--input-text-color);
+  font-family: var(--font);
+  transition: border-color 0.3s ease;
+}
+
+.form-group input:focus,
+.form-group select:focus,
+.form-group textarea:focus {
+  border-color: var(--input-border-focus-color);
+  outline: none;
+}
+
+
+.event-details-card{
+  background-color: var(--grey-60);
+  border-radius: 14px;
+  height: 800px;
+  padding: 1rem;
+  width: 800px
+}
