remade dropwdown card

--- a/src/App.css
+++ b/src/App.css
@@ -555,7 +555,7 @@ transform: translateY(-10px);
 
 .DropDownMenu-card {
  display: grid;
- margin-top: -300px;
+ /* margin-top: -300px; */
  grid-template-columns: 1fr;
  width: 90%;
  max-width: 700px;
