--- a/src/App.css
+++ b/src/App.css
@@ -1039,3 +1039,20 @@ transition: transform 0.5s ease-in-out, opacity 0.5s ease-in-out, box-shadow 0.5
   box-shadow: 0 0 10px var(--primary-50);
   transform: scale(1.05);
   }
+
+
+  /* verification */
+
+  .code-inputs {
+  display: flex;
+  gap: 10px;
+  justify-content: center;
+  margin-bottom: 1rem;
+}
+
+.code-box {
+  width: 40px;
+  height: 40px;
+  text-align: center;
+  font-size: 1.5rem;
+}
