--- a/src/App.css
+++ b/src/App.css
@@ -621,15 +621,15 @@ transition: transform 0.5s ease-in-out, opacity 0.5s ease-in-out, box-shadow 0.5
 
 }
 .drop-down-btn{
- width: 100%;
- height: 45px;
- background: #162938;
+ width: 90%;
+ height: 55px;
+ background: var(--primary-100);
  border: none;
  outline: none;
- border-radius: 6px;
+ border-radius: 40px;
  cursor: pointer;
  font-size: 1em;
- color: #fff;
+ color: var(--grey-10);
  font-weight: 500;
  transition: box-shadow 0.2s ease, transform 0.2s ease;
 }
@@ -638,7 +638,6 @@ transition: transform 0.5s ease-in-out, opacity 0.5s ease-in-out, box-shadow 0.5
   /* border:1px solid red; */
   box-shadow: 0 0 10px var(--primary-50);
   transform: scale(1.05);
-   
   }
 
 
@@ -863,6 +862,7 @@ transition: transform 0.5s ease-in-out, opacity 0.5s ease-in-out, box-shadow 0.5
 .event-details-card{
   background-color: var(--grey-10);
   border-radius: 16px;
+  max-width: 650px;
   padding: 1rem;
 }
 
@@ -989,8 +989,8 @@ transition: transform 0.5s ease-in-out, opacity 0.5s ease-in-out, box-shadow 0.5
   display: grid;
   grid-template-columns: 1fr;
   gap:1rem;
-  width: 90%;
-  max-width: 700px;
+  width: 100%;
+  max-width: 560px;
   background: rgba(255, 255, 255, 0.28);
   border: 2px solid rgba(255, 255, 255, 0.3);
   border-radius: 20px;
@@ -1023,20 +1023,22 @@ transition: transform 0.5s ease-in-out, opacity 0.5s ease-in-out, box-shadow 0.5
 
 .signup-btn {
  width: 100%;
- height: 45px;
- background: #162938;
+ height: 55px;
+ background: var(--primary-100);
  border: none;
  outline: none;
- border-radius: 6px;
+ border-radius: 40px;
  cursor: pointer;
+ font-family: var(--font);
  font-size: 1em;
  color: #fff;
  font-weight: 500;
+box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
  transition: box-shadow 0.2s ease, transform 0.2s ease;
 }
 .signup-btn:focus-within,
 .signup-btn:hover{
-  box-shadow: 0 0 10px var(--primary-50);
+  box-shadow: 0 0 10px var(--primary-30);
   transform: scale(1.05);
   }
 
@@ -1055,4 +1057,55 @@ transition: transform 0.5s ease-in-out, opacity 0.5s ease-in-out, box-shadow 0.5
   height: 40px;
   text-align: center;
   font-size: 1.5rem;
+}
+
+/* booking button  */
+
+.error-message {
+  color: var(--primary-100); 
+  background-color: var(--primary-30);
+  padding: 0.5rem 1rem;
+  border-radius: 8px;
+  font-weight: 600;
+  margin-top: 0.5rem;
+  display: inline-block;
+}
+
+.success-message {
+  color: var(--secondary-100); 
+  background-color: var(--primary-50); 
+  padding: 0.5rem 1rem;
+  border-radius: 8px;
+  font-weight: 600;
+  margin-top: 0.5rem;
+  display: inline-block;
+}
+
+.register-account {
+  display: inline-flex;
+  justify-self: center;
+  margin-bottom: 2rem;
+}
+
+.btn-big-boy{
+  .signup-btn {
+ width: 100%;
+ height: 55px;
+ background: var(--primary-100);
+ border: none;
+ outline: none;
+ border-radius: 40px;
+ cursor: pointer;
+ font-family: var(--font);
+ font-size: 1em;
+ color: #fff;
+ font-weight: 500;
+box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
+ transition: box-shadow 0.2s ease, transform 0.2s ease;
+}
+.btn-big-boy:focus-within,
+.btn-big-boy:hover{
+  box-shadow: 0 0 10px var(--primary-30);
+  transform: scale(1.05);
+  }
 }
